--- a/src/app/view/signin/signin.component.html
+++ b/src/app/view/signin/signin.component.html
@@ -6,13 +6,13 @@
             <label class="mt-8 flex justify-center text-3xl font-bold text-gray-900">เข้าสู่ระบบด้วยบัญชีของคุณ</label>
         </div>
 
-        <form class="mt-16 space-y-6" action="#" method="POST">
+        <form class="mt-16 space-y-6" #loginForm="ngForm" (ngSubmit)="checkUser(loginForm.value)">
             <input type="hidden" name="remember" value="true">
             <div class="rounded-md shadow-sm">
-                <input type="text" id="email-address" name="email" class="input" placeholder="Username" required>
+                <input type="email" id="email" name="email" class="input" placeholder="อีเมล" ngModel required>
             </div>
             <div class="rounded-md shadow-sm">
-                <input type="password" id="password" name="password" class="input" placeholder="Password" required>
+                <input type="password" id="password" name="password" class="input" placeholder="รหัสผ่าน" ngModel required>
             </div>
 
             <div class="flex items-center justify-between">
@@ -20,18 +20,17 @@
                 <div class="flex items-center">
                     <input id="remember-me" name="remember-me" type="checkbox"
                         class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
-                    <label for="remember-me" class="ml-2 block text-sm text-gray-900">Remember me</label>
+                    <label for="remember-me" class="ml-2 block text-sm text-gray-900">จำรหัสผ่าน</label>
                 </div>
 
                 <!-- Optional ถ้ามีเวลาทำให้ check password ใน database-->
-                <label class="text-sm font-medium cursor-pointer text-red-600 hover:text-red-500">Forgot your
-                    password?</label>
+                <label class="text-sm font-medium cursor-pointer text-red-600 hover:text-red-500">ลืมรหัสผ่าน?</label>
             </div>
 
             <button type="submit" class="button-primary">เข้าสู่ระบบ</button>
-            <label class="flex justify-center text-md text-gray-900">หากคุณยังไม่มีบัญชีผู้ใช้
-                <a href="register" class="ml-3 text-md text-green-600">ลงทะเบียนที่นี่</a>
-            </label>
         </form>
+        <label class="flex justify-center text-md text-gray-900">หากคุณยังไม่มีบัญชีผู้ใช้
+            <a routerLink="../register" class="ml-3 text-md text-green-600">ลงทะเบียนที่นี่</a>
+        </label>
     </div>
 </div>
