--- a/src/app/view/signup/signup.component.html
+++ b/src/app/view/signup/signup.component.html
@@ -5,17 +5,18 @@
         <form class="mt-16 space-y-6" action="#" method="POST">
             <input type="hidden" name="remember" value="true">
             <div class="rounded-md shadow-sm">
-                <input type="text" id="email-address" name="email" class="input" placeholder="Username" required>
+                <input type="text" id="fullname" name="fullname" class="input" placeholder="ชื่อ-สกุล" required>
             </div>
             <div class="rounded-md shadow-sm">
-                <input type="password" id="password" name="password" class="input" placeholder="Password" required>
+                <input type="email" id="email" name="email" class="input" placeholder="อีเมล" required>
             </div>
             <div class="rounded-md shadow-sm">
-                <input type="password" id="confirmPassword" name="confirmPassword" class="input" placeholder="Confirm-Password" required>
+                <input type="password" id="password" name="password" class="input" placeholder="รหัสผ่าน" required>
             </div>
             <div class="rounded-md shadow-sm">
-                <input type="email" id="email" name="email" class="input" placeholder="Email" required>
+                <input type="password" id="confirmPassword" name="confirmPassword" class="input" placeholder="รหัสผ่าน" required>
             </div>
+
 
             <button type="submit" class="button-primary">ยืนยัน</button>
         </form>
