--- a/src/app/view/signup/signup.component.html
+++ b/src/app/view/signup/signup.component.html
@@ -2,21 +2,30 @@
     <div class="w-full max-w-xl">
         <label class="mt-8 flex justify-center text-3xl font-bold text-gray-900">สมัครบัญชีผู้ใช้งาน</label>
 
-        <form class="mt-16 space-y-6" action="#" method="POST">
-            <input type="hidden" name="remember" value="true">
+        <form [formGroup]="userForm" (ngSubmit)="submit()" class="mt-16 space-y-6">
             <div class="rounded-md shadow-sm">
-                <input type="text" id="fullname" name="fullname" class="input" placeholder="ชื่อ-สกุล" required>
-            </div>
-            <div class="rounded-md shadow-sm">
-                <input type="email" id="email" name="email" class="input" placeholder="อีเมล" required>
-            </div>
-            <div class="rounded-md shadow-sm">
-                <input type="password" id="password" name="password" class="input" placeholder="รหัสผ่าน" required>
-            </div>
-            <div class="rounded-md shadow-sm">
-                <input type="password" id="confirmPassword" name="confirmPassword" class="input" placeholder="รหัสผ่าน" required>
+                <input type="text" formControlName="firstname" class="input" placeholder="ชื่อ" required>
+                <span *ngIf="!userForm.get('firstname')?.valid" class="invalid-input" [hidden]="showValid">กรอกชื่อให้ครบถ้วน</span>
             </div>
 
+            <div class="rounded-md shadow-sm">
+                <input type="text" formControlName="lastname" class="input" placeholder="นามสกุล" required>
+                <span *ngIf="!userForm.get('lastname')?.valid" class="invalid-input" [hidden]="showValid">กรอกนามสกุลให้ครบถ้วน</span>
+            </div>
+
+            <div class="rounded-md shadow-sm">
+                <input type="email" formControlName="email" class="input" placeholder="อีเมล" required>
+                <span *ngIf="!userForm.get('email')?.valid" class="invalid-input" [hidden]="showValid">กรอกอีเมลให้ครบถ้วน</span>
+            </div>
+            <div class="rounded-md shadow-sm p-fluid ">
+                <input type="password" formControlName="password" class="input" placeholder="รหัสผ่าน (อย่างน้อย 8 ตัวอักษร)" required >
+                <span *ngIf="!userForm.get('password')?.valid" class="invalid-input" [hidden]="showValid">กรอกรหัสผ่านให้ครบถ้วน </span>
+            </div>
+            <div class="rounded-md shadow-sm">
+                <input type="password" formControlName="confirmPassword" class="input" placeholder="ยืนยันรหัสผ่าน (อย่างน้อย 8 ตัวอักษร)" required>
+                <span *ngIf="!userForm.get('confirmPassword')?.valid" class="invalid-input" [hidden]="showValid">กรอกรหัสผ่านให้ครบถ้วน</span>
+                <span *ngIf="userForm.errors?.['passwordsDontMatch']" class="invalid-input" [hidden]="showValid">รหัสผ่านไม่ตรงกัน</span>
+            </div>
 
             <button type="submit" class="button-primary">ยืนยัน</button>
         </form>
