--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -23,27 +23,26 @@
             </div>
             <div class="hidden md:block">
                 <div class="ml-4 flex items-center md:ml-6">
-                    <button type="button"
-                        class="rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                            stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
-                        </svg>
+                    <button type="button" class="text-gray-400 hover:text-white" routerLink="/cart">
+                        <i class="pi pi-shopping-cart p-2" style="font-size: 1.25rem"></i>
                     </button>
 
-                    <div class="relative ml-3">
-                        <div>
-                            <button type="button"
-                                class="flex max-w-xs items-center rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-                                id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-                                <span class="sr-only">Open user menu</span>
-                                <img class="h-8 w-8 rounded-full"
-                                    src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                                    alt="">
-                            </button>
-                        </div>
+                    <div class=" flex items-center ml-3 p-1" *ngIf="user$ | async as user; else login">
+                        <button type="button" class="avatar-active" routerLink="/account">
+                            <img class="h-8 w-8 rounded-full" *ngIf="userData.photoURL; else noPhoto"
+                                [src]="userData.photoURL">
+                            <ng-template #noPhoto>
+                                <p class="avatar">
+                                    {{ userData.firstname | slice:0:1 }}{{ userData.lastname | slice:0:1}}
+                                </p>
+                            </ng-template>
+                        </button>
                     </div>
+
+                    <ng-template #login>
+                        <button type="button" class="p-1 px-4 ml-2  rounded-md text-white bg-neutral-600 "
+                            routerLink="/login">Sign In</button>
+                    </ng-template>
                 </div>
             </div>
 
