--- a/src/app/component/modal/modal.component.html
+++ b/src/app/component/modal/modal.component.html
@@ -1,1 +1,48 @@
-<p>modal works!</p>
+<!-- <p-dialog [(visible)]="showDialog" [resizable]="false" [modal]="true" [draggable]="false" [style]="{width: '75vw'}">
+    <div class="grid grid-flow-row-dense grid-cols-12">
+        <div class="col-span-5">
+            <p-carousel *ngIf="productDetail" [value]="images" [numVisible]="1" [numScroll]="1">
+                <ng-template let-images pTemplate="item" class="flex justify-center items-center overflow-hidden">
+                    <img [src]="images.src" class="object-bottom bg-gray-100 rounded-md">
+                </ng-template>
+            </p-carousel>
+        </div>
+        <p-divider layout="vertical"></p-divider>
+        <div class="col-span-5">
+            <p class="text-3xl font-bold mb-2"> {{ productDetail.name }} </p>
+            <p class="text-2xl font-bold"> {{ productDetail.price }} Bath </p>
+            <p-divider></p-divider>
+            <p class="text-xl font-bold">Serires : {{ productDetail.series }}</p>
+            <p class="text-xl font-bold">คุณสมบัติ</p>
+            <div class="flex items-center mt-3">
+                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
+                <p class="text-xl">Brand : BANDAI</p>
+            </div>
+            <p class="text-xl ml-12">Origin : Japan</p>
+            <p class="text-xl ml-12">Product Type : Gunpla Plastic</p>
+
+            <div class="flex items-center mt-3">
+                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
+                <p class="text-xl">Model Kit</p>
+            </div>
+            <p class="text-xl ml-12">Model Scale : 1/144</p>
+            <p class="text-xl ml-12">Model Heigth : 13 cm.</p>
+
+            <div class="flex items-center mt-3">
+                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
+                <p class="text-xl">Model Kit Contains</p>
+            </div>
+            <p class="text-xl ml-12">Gundam Model x 1</p>
+            <p class="text-xl ml-12">Sticker</p>
+
+        </div>
+    </div>
+    <ng-template pTemplate="footer">
+        <div class="grid grid-flow-row-dense grid-cols-12">
+            <div class="col-span-6"></div>
+            <div class="col-span-6 flex justify-center">
+                <button class="button-cart" (click)="addToCart()">เพิ่มเข้าตะกร้า</button>
+            </div>
+        </div>
+    </ng-template>
+</p-dialog> -->
