--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,4 @@
-<div class="mx-auto w-full max-w-screen-lg px-4 sm:px-6 lg:px-8 my-32">
+<div class="mx-auto w-full max-w-screen-lg px-4 sm:px-6 lg:px-8 my-52">
     <div class="grid grid-cols-1">
 
         <div id="header" class="text-xl">
@@ -33,8 +33,8 @@
     </div>
 </div>
 
-<footer class="bg-black mx-auto mt-32 w-full max-w-full px-4 sm:px-6 lg:px-8 border-2 border-red-500">
-    <div>
+<footer>
+    <div class="absolute pt-40 bottom-0 w-full xs:item-baseline sm:px-5 bg-black">
         1
     </div>
 </footer>
