--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+<!---
 <div class="container font-inter md:mx-auto h-[500px] w-[700px] mt-[20em] font-sans">
     <div class="gap-y-80 columns-1 text-center mt-[12em]">
         <h1 class="text-2xl mb-7">ตะกร้าของคุณยังว่างอยู่</h1>
@@ -7,4 +8,69 @@
         </div>
     </div>
 </div>
-<footer class="absolute left-11 bottom-[20px]">@cannabin shop</footer>
+<footer class="absolute left-11 bottom-[20px]">@cannabin shop</footer> -->
+
+<!-- Empty cart -->
+
+
+<div class="mx-auto w-full max-w-screen-lg px-4 sm:px-6 lg:px-0 my-20">
+
+    <div class="flex flex-col">
+        <p class="align-middle text-center font-bold text-3xl"> CART </p>
+        <div class="flex flex-row justify-between mt-9 mb-4 font-bold">
+            <p class="flex w-64">PRODUCT</p>
+            <p class="flex">QUANTITY</p>
+            <p class="flex">TOTAL</p>
+        </div>
+        <hr>
+        <!--ORDER HERE-->
+        <div class="flex flex-row justify-between justify-items-center gap-28">
+            <!--ORDERS EXAMPLES-->
+            <div class="flex justify-self-start">
+                <img class="max-w-xs w-40 mt-4"
+                    src="https://media.discordapp.net/attachments/1029261631118651444/1034056148350926878/rg-gn-001-gundam-exia-00_clipped_rev_1.jpg?width=671&height=671">
+            </div>
+
+            <div class="flex-1 self-center font-bold">
+                <p>HG GUNDAM EXIA II</p>
+                <p>470 THB</p>
+            </div>
+
+            <div class="flex-1 flex-col w-5 self-center">
+                <div class="flex border-[1px] border-black w-32 h-10 justify-between">
+                    <div>
+                        <button class="w-10 h-[39px] text-black font-bold hover:text-gray-700">-</button>
+                    </div>
+                    <div class="self-center font-bold">
+                        <p>1</p>
+                    </div>
+                        <div>
+                            <button class="w-10 h-[39px] text-black font-bold hover:text-gray-700">+</button>
+                        </div>
+                    </div>
+                    <button class="text-black font-bold font hover:text-gray-700 mt-2">REMOVE</button>
+                </div>
+
+                <div class="flex-1 self-center text-right font-bold">
+                    <p>470 THB</p>
+                </div>
+            </div>
+            <hr>
+        </div>
+        <!--END ORDER-->
+
+        <div class="flex flex-row justify-end mt-4 font-bold">
+            <p class="flex w-36 text-right">TOTAL :</p>
+            <p class="flex">470 THB</p>
+        </div>
+
+        <p class="text-right font-extralight text-base mt-3 opacity-50">Shipping & taxes calculated at checkout</p>
+
+        <div class="flex flex-row justify-end mt-4 mb-40">
+            <button class="bg-black text-white font-bold px-4 py-2 rounded hover:bg-gray-700">CHECKOUT</button>
+        </div>
+
+        <div>
+            <!--- ขก ทำ  ---->
+        </div>
+    </div>
