--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -39,38 +39,37 @@
             <div class="flex-1 flex-col w-5 self-center">
                 <div class="flex border-[1px] border-black w-32 h-10 justify-between">
                     <div>
-                        <button class="w-10 h-[39px] text-black font-bold hover:text-gray-700">-</button>
+                        <button onclick="" class="w-10 h-[39px] text-black font-bold hover:text-gray-700">-</button>
                     </div>
                     <div class="self-center font-bold">
-                        <p>1</p>
+                        <p id="num">1</p>
                     </div>
-                        <div>
-                            <button class="w-10 h-[39px] text-black font-bold hover:text-gray-700">+</button>
-                        </div>
+                    <div>
+                        <button onclick="plus" class="w-10 h-[39px] text-black font-bold hover:text-gray-700">+</button>
                     </div>
-                    <button class="text-black font-bold font hover:text-gray-700 mt-2">REMOVE</button>
                 </div>
-
-                <div class="flex-1 self-center text-right font-bold">
-                    <p>470 THB</p>
-                </div>
+                <button class="text-black font-bold font hover:text-gray-700 mt-2">REMOVE</button>
             </div>
-            <hr>
-        </div>
-        <!--END ORDER-->
 
-        <div class="flex flex-row justify-end mt-4 font-bold">
-            <p class="flex w-36 text-right">TOTAL :</p>
-            <p class="flex">470 THB</p>
+            <div class="flex-1 self-center text-right font-bold">
+                <p>470 THB</p>
+            </div>
         </div>
-
-        <p class="text-right font-extralight text-base mt-3 opacity-50">Shipping & taxes calculated at checkout</p>
-
-        <div class="flex flex-row justify-end mt-4 mb-40">
-            <button class="bg-black text-white font-bold px-4 py-2 rounded hover:bg-gray-700">CHECKOUT</button>
-        </div>
-
-        <div>
-            <!--- ขก ทำ  ---->
-        </div>
+        <hr>
     </div>
+    <!--END ORDER-->
+    <div class="flex flex-row justify-end mt-4 font-bold">
+        <p class="flex w-36 text-right">TOTAL :</p>
+        <p class="flex">470 THB</p>
+    </div>
+
+    <p class="text-right font-extralight text-base mt-3 opacity-50">Shipping & taxes calculated at checkout</p>
+
+    <div class="flex flex-row justify-end mt-4 mb-40">
+        <button class="bg-black text-white font-bold px-4 py-2 rounded hover:bg-gray-700">CHECKOUT</button>
+    </div>
+
+    <div>
+        <!--- ขก ทำ  ---->
+    </div>
+</div>
