--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -28,7 +28,7 @@
                     </button>
 
                     <div class=" flex items-center ml-3 p-1" *ngIf="user$ | async as user; else login">
-                        <button type="button" class="avatar-active" routerLink="/account" (click)="authenService.signout()">
+                        <button type="button" class="avatar-active" (click)="menu.toggle($event)">
                             <img class="h-8 w-8 rounded-full" *ngIf="userData.photoURL; else noPhoto"
                                 [src]="userData.photoURL">
                             <ng-template #noPhoto>
@@ -37,6 +37,7 @@
                                 </p>
                             </ng-template>
                         </button>
+                        <p-menu #menu [popup]="true" [model]="items" styleClass="mt-5 -ml-40"></p-menu>
                     </div>
 
                     <ng-template #login>
