--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -23,9 +23,8 @@
             </div>
             <div class="hidden md:block">
                 <div class="ml-4 flex items-center md:ml-6">
-                    <button type="button" class="text-gray-400 hover:text-white mr-5" routerLink="/cart">
-                        <i class="pi pi-shopping-cart p-2" style="font-size: 1.25rem" pBadge style="font-size: 1.25rem"
-                            severity="success" [value]="badgeNumber"></i>
+                    <button type="button" class="text-gray-400 hover:text-white" routerLink="/cart">
+                        <i class="pi pi-shopping-cart p-2" style="font-size: 1.5rem"></i>
                     </button>
 
                     <div class=" flex items-center ml-3 p-1" *ngIf="user$ | async as user; else login">
