--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,118 +1,46 @@
 <nav class="bg-neutral-900">
-    <div class="mx-auto max-w-7xl px- sm:px-6 lg:px-8">
+    <div class="mx-auto max-w-7xl py-2 sm:px-6 lg:px-8">
         <div class="flex h-20 items-center justify-between">
             <div class="flex items-center">
                 <a href="home">
-                    <!-- TODO Change Logo -->
-                    <img class="h-32 w-32" src="https://cdn.discordapp.com/attachments/1021435603688099913/1036658980145090570/13_20221031221202.png">
+                    <img class="h-32 w-32"
+                        src="https://cdn.discordapp.com/attachments/1021435603688099913/1037374937096261692/13_20221102213655.png">
                 </a>
-                <div class="hidden md:block">
-                    <div class="ml-10 flex items-center space-x-5">
-                        <a class="item-navbar" routerLinkActive="item-navbar-active"
-                            routerLink="category/high-grade">High Grade</a>
-                        <a class="item-navbar" routerLinkActive="item-navbar-active"
-                            routerLink="category/real-grade">Real Grade</a>
-                        <a class="item-navbar" routerLinkActive="item-navbar-active"
-                            routerLink="category/master-grade">Master Grade</a>
-                        <a class="item-navbar" routerLinkActive="item-navbar-active"
-                            routerLink="category/perfect-grade">Perfect Grade</a>
-                        <a class="item-navbar" routerLinkActive="item-navbar-active"
-                            routerLink="category/tool">Tools</a>
-                    </div>
+                <div class="ml-10 flex items-center space-x-5">
+                    <a class="item-navbar" routerLinkActive="item-navbar-active" routerLink="category/high-grade">High
+                        Grade</a>
+                    <a class="item-navbar" routerLinkActive="item-navbar-active" routerLink="category/real-grade">Real
+                        Grade</a>
+                    <a class="item-navbar" routerLinkActive="item-navbar-active"
+                        routerLink="category/master-grade">Master Grade</a>
+                    <a class="item-navbar" routerLinkActive="item-navbar-active"
+                        routerLink="category/perfect-grade">Perfect Grade</a>
+                    <a class="item-navbar" routerLinkActive="item-navbar-active" routerLink="category/tool">Tools</a>
                 </div>
             </div>
-            <div class="hidden md:block">
-                <div class="ml-4 flex items-center md:ml-6">
-                    <button type="button" class="text-gray-400 hover:text-white" routerLink="/cart">
-                        <i class="pi pi-shopping-cart p-2" style="font-size: 1.5rem"></i>
+            <div class="ml-4 flex items-center md:ml-6">
+                <button type="button" class="text-gray-400 hover:text-white" routerLink="/cart">
+                    <i class="pi pi-shopping-cart p-2" style="font-size: 1.5rem"></i>
+                </button>
+
+                <div class=" flex items-center ml-3 p-1" *ngIf="user$ | async as user; else login">
+                    <button type="button" class="avatar-active" (click)="menu.toggle($event)">
+                        <img class="h-8 w-8 rounded-full" *ngIf="userData.photoURL; else noPhoto"
+                            [src]="userData.photoURL">
+                        <ng-template #noPhoto>
+                            <p class="avatar">
+                                {{ userData.firstname | slice:0:1 }}{{ userData.lastname | slice:0:1}}
+                            </p>
+                        </ng-template>
                     </button>
-
-                    <div class=" flex items-center ml-3 p-1" *ngIf="user$ | async as user; else login">
-                        <button type="button" class="avatar-active" (click)="menu.toggle($event)">
-                            <img class="h-8 w-8 rounded-full" *ngIf="userData.photoURL; else noPhoto"
-                                [src]="userData.photoURL">
-                            <ng-template #noPhoto>
-                                <p class="avatar">
-                                    {{ userData.firstname | slice:0:1 }}{{ userData.lastname | slice:0:1}}
-                                </p>
-                            </ng-template>
-                        </button>
-                        <p-menu #menu [popup]="true" [model]="items" styleClass="mt-5 -ml-40"></p-menu>
-                    </div>
-
-                    <ng-template #login>
-                        <button type="button" class="px-8 py-2 ml-2  rounded-md text-white bg-neutral-600 "
-                            routerLink="/login">Sign In</button>
-                    </ng-template>
+                    <p-menu #menu [popup]="true" [model]="items" styleClass="mt-5 -ml-40"></p-menu>
                 </div>
+
+                <ng-template #login>
+                    <button type="button" class="px-8 py-2 ml-2  rounded-md text-white bg-neutral-600 "
+                        routerLink="/login">Sign In</button>
+                </ng-template>
             </div>
-
-            <div class="-mr-2 flex md:hidden">
-                <!-- Mobile menu button -->
-                <button type="button"
-                    class="inline-flex items-center justify-center rounded-md bg-gray-800 p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-                    aria-controls="mobile-menu" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-
-                    <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                    </svg>
-
-                    <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                    </svg>
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Mobile menu, show/hide based on menu state. -->
-    <div class="md:hidden" id="mobile-menu">
-        <div class="space-y-1 px-2 pt-2 pb-3 sm:px-3">
-            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a href="category/high-grade" class="item-navbar block" aria-current="page">High Grade</a>
-            <a href="category/real-grade" class="item-navbar block">Real Grade</a>
-            <a href="category/master-grade" class="item-navbar block">Master Grade</a>
-            <a href="category/perfect-grade" class="item-navbar block">Perfect Grade</a>
-            <a href="category/tool" class="item-navbar block">Tools</a>
-        </div>
-        <div class="border-t border-gray-700 pt-4 pb-3">
-            <div class="flex items-center px-5">
-                <div class="flex-shrink-0">
-                    <img class="h-10 w-10 rounded-full"
-                        src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                        alt="">
-                </div>
-                <div class="ml-3">
-                    <div class="text-base font-medium leading-none text-white">Tom Cook</div>
-                    <div class="text-sm font-medium leading-none text-gray-400">tom@example.com</div>
-                </div>
-                <button type="button"
-                    class="ml-auto flex-shrink-0 rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-                    <span class="sr-only">View notifications</span>
-                    <!-- Heroicon name: outline/bell -->
-                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
-                    </svg>
-                </button>
-            </div>
-            <!-- <div class="mt-3 space-y-1 px-2">
-                    <a href="#"
-                        class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Your
-                        Profile</a>
-
-                    <a href="#"
-                        class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Settings</a>
-
-                    <a href="#"
-                        class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Sign
-                        out</a>
-                </div> -->
         </div>
     </div>
 </nav>
